force-app/main/default/objects/QTB_Pricefx_Urls__mdt/QTB_Pricefx_Urls__mdt.object-meta.xml
<CustomObject>
    <description>#SFCPQBLG-162 : To store the pricefx urls so that we can&apos;t configure them later</description>
    <label>Pricefx Urls</label>
    <pluralLabel>Pricefx Urls</pluralLabel>
</CustomObject>