force-app/main/default/objects/QTB_Pricefx_Urls__mdt/fields/QTB_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country_Code__c</fullName>
    <description>#SFCPQBLG-162: to store the countries for which Pricefx is available(two digit form)</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>