force-app/main/default/objects/QTB_Pricefx_Urls__mdt/fields/QTB_Integration_Short_Form__c.field-meta.xml
<CustomField>
    <fullName>QTB_Integration_Short_Form__c</fullName>
    <description>#SFCPQBLG-30 : to send the short forms to pricefx renewal integration</description>
    <label>Integration Short Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>