force-app/main/default/objects/QTB_Pricefx_Urls__mdt/fields/QTB_ResponseKey__c.field-meta.xml
<CustomField>
    <fullName>QTB_ResponseKey__c</fullName>
    <description>#SFCPQBLG-162: to map the corresponding billcode or billcode family once the response comes back</description>
    <label>ResponseKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>