force-app/main/default/objects/QTB_Pricefx_Urls__mdt/fields/QTB_urls__c.field-meta.xml
<CustomField>
    <fullName>QTB_urls__c</fullName>
    <description>#SFCPQBLG-162: To store pricefx urls</description>
    <label>urls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>